kubernetes/orders-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  ports:
    - port: 8080
      targetPort: 9080
  selector:
    app: bluecompute
    tier: backend
    micro: orders
...
