kubernetes/ordersdb.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ordersdb-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ordersdb
    spec:
      containers:
        - name: ordersdb
          image: mysql:latest
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: ordersdb-disk
          ports:
            - containerPort: 3306
      volumes:
        - name: ordersdb-disk
          persistentVolumeClaim:
            claimName: ordersdb-disk
---
apiVersion: v1
kind: Service
metadata:
  name: ordersdb
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: ordersdb
...
